gap fixed in section 2

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
     width: 100%;
     height: 100%;
 }
-@media (width <= 850px){
+@media (width <= 768px){
     .first-section-container img {
         height: auto;
         width: 100%;
